src/tests/testfiles/unary-operators/types-8.txt
Error at 2:3: invalid type argument of unary '*' (have 'int rvalue')
*5;
 ^
